test_case/rust-lang_rust/42634_308560533_1.rs
rust
fn main() {
    for i in Vec::new() { } //~ ERROR type annotations needed
}
